--- a/app/index.html
+++ b/app/index.html
@@ -40,14 +40,17 @@
                 Наш магазин отбирает только самые лучшие велосипеды для продажи
             </p>
         </div>
-        <form action="#" class="header__form">
+        <div class="header__form">
             <p class="form__title">
                 Заполните поля ниже и мы подберем велосипед Вашей мечты
             </p>
-            <input type="text" id="name" class="form__input" placeholder="Введите Ваше Имя">
-            <input type="tel" id="tel" class="form__input" placeholder="Введите Ваш номер телефона">
-            <button class="form__button">Подобрать велосипед мечты</button>
-        </form>
+            <form action="#" class="header__form-item">            
+                <input type="text" id="name" class="form__input" placeholder="Введите Ваше Имя">
+                <input type="tel" id="tel" class="form__input" placeholder="Введите Ваш номер телефона">
+                <button class="form__button">Подобрать велосипед мечты</button>
+            </form>
+        </div>
+        
     </header>
     <section class="about">
         <h2 class="about__title">
